# Cyberdeck

./: index.html  package.json  pnpm-lock.yaml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/bindings/: SlayfiClientConfig.ts
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  main.rs
src/types/: Application.ts  ClientConfig.ts
src/utils/: LayoutTransliterator.ts
