[package]
name = "cyberdeck"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cyberdeck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "protocol-asset", "unstable"] }
tauri-plugin-opener = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
gtk = { version = "0.18.2", package = "gtk"}
freedesktop-file-parser = "0.3.1"
walkdir = "2.5.0"
log = "0.4.27"
env_logger = "0.11.3"
chrono = "0.4"
freedesktop-icons = "0.4.0"
aho-corasick = "1.1.3"
serde_json = "1.0.140"
tauri-plugin-devtools = "2.0.0"
tauri-plugin-log = "2"
once_cell = "1.21.3"
ts-rs = "11.0.1"
gtk-layer-shell = {version = "0.8.2", features = ["v0_6"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"

